Use current window for editing source code

--- a/settings.org
+++ b/settings.org
@@ -45,6 +45,7 @@
   (global-set-key (kbd "C-c a") 'org-agenda)
   (setq org-agenda-files '("~/Dropbox/Documents"))
   (setq org-tags-column 0)
+  (setq org-src-window-setup 'current-window)
 
   (add-to-list 'auto-mode-alist '("\\.\\(xslt\\|targets\\)\\'" . nxml-mode))
 
